<resources>
    <string name="app_name">SMPadala</string>
    <string name="menu">Menu</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="amount">Amount</string>
    <string name="customer_name">Customer\'s Name</string>
    <string name="customer_mobile">Customer\'s Mobile No.</string>
    <string name="receiver_mobile">Receiver\'s Mobile No.</string>
    <string name="customer_address">Customer\'s Address</string>
    <string name="charge">Charge</string>
    <string name="balance">Balance</string>
    <string name="reference">Ref No.</string>
    <string name="status">Status</string>
    <string name="receive_money">Receive Money</string>
    <string name="tag_customer">Tag Customer</string>
    <string name="na">N/A</string>
    <string name="pending">Pending</string>
    <string name="claimed">Claimed</string>
    <string name="receive">Receive</string>
    <string name="mark">Mark</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="add_new">New</string>
    <string name="select_date">Select Date</string>
    <string name="select_customer">Select Customer</string>
    <string name="show_transfers">Show Transfers</string>
    <string name="show_claimed">Show Claimed</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="customers">Customers</string>
    <string name="save">Save</string>
    <string name="data_analytics">Data Analytics</string>
    <string name="daily_summary_report">Daily Summary Report</string>
    <string name="restore_backup">Restore Back-up</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="add_customer">Add Customer</string>
    <string name="view_photo"><u>View Photo</u></string>
    <string name="money_claimed">The money was claimed by the customer.</string>
    <string name="back_up_data">Back-up Data</string>
    <string name="permission_required">Permissions Required</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_charge">Total Charge</string>
    <string name="total_count">Total Transactions</string>
    <string name="transfer_amount">Transferred Amount</string>
    <string name="transfer_charge">Transfer Fee</string>
    <string name="transfer_count">Transferred Transactions</string>
    <string name="receive_amount">Received Amount</string>
    <string name="receive_charge">Commission</string>
    <string name="receive_count">Received Transactions</string>
    <string name="receive_unclaimed">Unclaimed Transactions</string>
</resources>
