<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:codePan="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header"
        android:background="@color/header">

        <FrameLayout
            android:layout_width="@dimen/header"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <ImageView
                android:layout_width="@dimen/ten"
                android:layout_height="@dimen/nine"
                android:layout_gravity="center"
                android:src="@drawable/ic_back"/>

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnBackDailySummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/state_rect_trans_dark"/>

        </FrameLayout>

        <com.codepan.widget.CodePanLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/daily_summary_report"
            android:textColor="@color/white"
            android:textSize="@dimen/ten"
            codePan:typeface="@string/helvetica_neue_light"/>

        <FrameLayout
            android:layout_width="@dimen/header"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <ImageView
                android:layout_width="@dimen/ten"
                android:layout_height="@dimen/ten"
                android:layout_gravity="center"
                android:src="@drawable/ic_calendar"/>

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnCalendarDailySummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/state_rect_trans_dark"/>

        </FrameLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_pri"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="@dimen/five"
        android:paddingBottom="@dimen/five">

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_amount"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_charge"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_count"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/transfer_amount"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/transfer_charge"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/transfer_count"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/receive_amount"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/receive_charge"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/receive_count"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/receive_unclaimed"
            android:textColor="@color/white"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lvDailySummary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:divider="@color/divider"
        android:dividerHeight="@dimen/one"
        android:listSelector="@color/transparent"
        android:scrollbarSize="@dimen/scrollbar"
        android:scrollbarThumbVertical="@color/scrollbar"/>

</LinearLayout>