<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:codePan="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlTransfer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_bg"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/nine">

    <LinearLayout
        android:layout_width="@dimen/two_hundred_fifty"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_rect_white_rad_five"
        android:orientation="vertical"
        android:padding="@dimen/ten">

        <com.codepan.widget.CodePanLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tag_customer"
            android:textColor="@color/theme_pri"
            android:textSize="@dimen/ten"
            codePan:typeface="@string/dialog_title_font"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five">

            <FrameLayout
                android:id="@+id/flPhotoTransfer"
                android:layout_width="@dimen/fifty"
                android:layout_height="@dimen/fifty"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/ivPhotoTransfer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_camera"/>

                <com.codepan.widget.CodePanButton
                    android:id="@+id/btnPhotoTransfer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/state_rect_trans_dark"/>

            </FrameLayout>

            <com.codepan.widget.CodePanLabel
                android:id="@+id/tvViewPhotoTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/flPhotoTransfer"
                android:layout_toEndOf="@+id/flPhotoTransfer"
                android:layout_toRightOf="@+id/flPhotoTransfer"
                android:padding="@dimen/five"
                android:text="@string/view_photo"
                android:textColor="@color/theme_sec"
                android:textSize="@dimen/nine"
                codePan:typeface="@string/helvetica_neue_light"/>

            <LinearLayout
                android:id="@+id/llDetailsTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:orientation="vertical">

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvDateTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_pri"
                    android:textSize="@dimen/nine"
                    codePan:typeface="@string/helvetica_neue_light"/>

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvTimeTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two"
                    android:textColor="@color/red_pri"
                    android:textSize="@dimen/nine"
                    codePan:typeface="@string/helvetica_neue_light"/>

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvAmountTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two"
                    android:textColor="@color/red_pri"
                    android:textSize="@dimen/nine"
                    codePan:typeface="@string/helvetica_neue_light"/>

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvRefNoTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two"
                    android:textColor="@color/red_pri"
                    android:textSize="@dimen/nine"
                    codePan:typeface="@string/helvetica_neue_light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/fifteen"
                android:layout_marginRight="@dimen/fifteen"
                android:layout_toLeftOf="@+id/llDetailsTransfer"
                android:layout_toStartOf="@+id/llDetailsTransfer"
                android:orientation="vertical">

                <com.codepan.widget.CodePanLabel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/gray_ter"
                    android:textSize="@dimen/nine"
                    codePan:typeface="@string/helvetica_neue_light"/>

                <com.codepan.widget.CodePanLabel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two"
                    android:text="@string/time"
                    android:textColor="@color/gray_ter"
                    android:textSize="@dimen/nine"
                    codePan:typeface="@string/helvetica_neue_light"/>

                <com.codepan.widget.CodePanLabel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two"
                    android:text="@string/amount"
                    android:textColor="@color/gray_ter"
                    android:textSize="@dimen/nine"
                    codePan:typeface="@string/helvetica_neue_light"/>

                <com.codepan.widget.CodePanLabel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two"
                    android:text="@string/reference"
                    android:textColor="@color/gray_ter"
                    android:textSize="@dimen/nine"
                    codePan:typeface="@string/helvetica_neue_light"/>

            </LinearLayout>

        </RelativeLayout>

        <com.codepan.widget.CodePanLabel
            android:id="@+id/tvNameTitleTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:text="@string/customer_name"
            android:textColor="@color/gray_pri"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <AutoCompleteTextView
            android:id="@+id/etNameTransfer"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/state_rect_gray_qui_rad_one"
            android:completionThreshold="1"
            android:imeOptions="actionNext|flagNoFullscreen"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="@dimen/five"
            android:singleLine="true"
            android:textColor="@color/gray_pri"
            android:textSize="@dimen/nine"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:text="@string/customer_mobile"
            android:textColor="@color/gray_pri"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanTextField
            android:id="@+id/etMobileNoTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/state_rect_gray_qui_rad_one"
            android:imeOptions="actionNext|flagNoFullscreen"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="@dimen/five"
            android:singleLine="true"
            android:textColor="@color/gray_pri"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:text="@string/receiver_mobile"
            android:textColor="@color/gray_pri"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanTextField
            android:id="@+id/etReceiverTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/state_rect_gray_qui_rad_one"
            android:imeOptions="actionNext|flagNoFullscreen"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="@dimen/five"
            android:singleLine="true"
            android:textColor="@color/gray_pri"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:text="@string/customer_address"
            android:textColor="@color/gray_pri"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <com.codepan.widget.CodePanTextField
            android:id="@+id/etAddressTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/state_rect_gray_qui_rad_one"
            android:gravity="start|top"
            android:imeOptions="actionDone|flagNoFullscreen"
            android:inputType="textCapWords"
            android:minHeight="@dimen/fifty"
            android:padding="@dimen/five"
            android:textColor="@color/gray_pri"
            android:textSize="@dimen/nine"
            codePan:typeface="@string/helvetica_neue_light"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/eight"
            android:orientation="horizontal">

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnCancelTransfer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/state_rect_gray_qua_rad_three"
                android:minWidth="@dimen/sixty"
                android:paddingBottom="@dimen/five"
                android:paddingLeft="@dimen/three"
                android:paddingRight="@dimen/three"
                android:paddingTop="@dimen/five"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/nine"
                android:visibility="visible"
                codePan:typeface="@string/helvetica_neue_mid"/>

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnTagTransfer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/three"
                android:layout_marginStart="@dimen/three"
                android:background="@drawable/state_rect_theme_sec_rad_three"
                android:minWidth="@dimen/sixty"
                android:paddingBottom="@dimen/five"
                android:paddingLeft="@dimen/three"
                android:paddingRight="@dimen/three"
                android:paddingTop="@dimen/five"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/nine"
                codePan:typeface="@string/helvetica_neue_mid"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>